# repository-manager

./: .bumpversion.cfg  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  a2a.json  compose.yml  connector_manifest.yml  debug.Dockerfile  debug_map.py  ground_truth.txt  index.html  mcp.compose.yml  mcp_config.json  mkdocs.yml  opencode.json  pyproject.toml  pytest.ini  pytest_out.txt  report_final.md  report_fixed.md  requirements.txt  run_single_enhancer.py  run_validate.py  run_validate_final.py  scratch_check_kg.py  setup.py  sitemap.xml  test_output_10.txt  test_output_11.txt  test_output_12.txt  test_output_13.txt  test_output_14.txt  (+15 more)
.specify/: results.json
.specify/reports/: code_enhancement_report.md
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260522/: spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
Workspace/: report.md
concepts/: index.html
configuration/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  phased_maintenance.md  phased_push.md  usage.md
installation/: index.html
legacy_readme/: index.html
overview/: index.html
phased_maintenance/: index.html
phased_push/: index.html
repository_manager/: AGENTS.md  __init__.py  __main__.py  agent.py  agent_server.py  enhancement_graph.py  graph_config.py  kg_ingest.py  knowledge_graph.db.wal  mcp.py  mcp_config.json  mcp_server.py  models.py  prompts.py  repositories-list.txt  repository_manager.py  repository_manager_a2a.py  repository_manager_agent.py  repository_manager_agent.py.bak  repository_manager_mcp.py  scan_models.py  scanner.py  tools.py  utils.py  vcs_enumerator.py  version.py  workspace.yml  worktree.py
repository_manager/agent/: HEARTBEAT.md  IDENTITY.md
repository_manager/agent_data/: CRON_LOG.md  IDENTITY.md  MEMORY.md  NODE_AGENTS.md  knowledge_graph.db  mcp_config.json  templates.py
repository_manager/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
repository_manager/graph/: __init__.py  engine.py  models.py  registry.py
repository_manager/mcp/: __init__.py  mcp_git_operations.py  mcp_misc.py  mcp_project_management.py  mcp_workspace_management.py
repository_manager/ontology/: __init__.py  certification.json  repository.ttl
repository_manager/ontology/fixtures/: records.json
repository_manager/ontology/mappings/: source.yaml
repository_manager/ontology/migrations/: manifest.json
repository_manager/ontology/shapes/: connector.shacl.ttl
repository_manager/prompts/: main_agent.json  repository_specialist.json
repository_manager/skills/bash/: SKILL.md
repository_manager/skills/documentation/: SKILL.md
repository_manager/skills/file-operations/: SKILL.md
repository_manager/skills/git-advanced/: SKILL.md  debug-bisect.md
repository_manager/skills/git-branch-merge/: SKILL.md  troubleshoot-merge.md
repository_manager/skills/git-cli-docs/reference/: api-trace2.md  community.md  doc_ext.md  git-add.md  git-am.md  git-annotate.md  git-apply.md  git-archive.md  git-bisect.md  git-blame.md  git-branch.md  git-bugreport.md  git-bundle.md  git-cat-file.md  git-check-ignore.md  git-check-mailmap.md  git-check-ref-format.md  git-checkout-index.md  git-checkout.md  git-cherry-pick.md  git-clean.md  git-clone.md  git-column.md  git-commit-graph.md  git-commit-tree.md  git-commit.md  git-config.md  git-daemon.md  (+196 more)
repository_manager/skills/git-clone/: SKILL.md
repository_manager/skills/git-commit-stage/: SKILL.md
repository_manager/skills/git-config/: SKILL.md
repository_manager/skills/git-log-history/: SKILL.md
repository_manager/skills/git-operations/: SKILL.md
repository_manager/skills/git-pull/: SKILL.md
repository_manager/skills/git-remote-pull-push/: SKILL.md
repository_manager/skills/git-stash/: SKILL.md
repository_manager/skills/git-status/: SKILL.md
repository_manager/skills/git-status-reset/: SKILL.md
repository_manager/skills/git-tag-release/: SKILL.md
repository_manager/skills/pre-commit/: SKILL.md
repository_manager/skills/project-management/: SKILL.md
repository_manager/skills/python-sandbox/: SKILL.md
repository_manager/skills/repository-manager-bulk-git-operations/: SKILL.md  WORKFLOW.md
repository_manager/skills/repository-manager-operations/: SKILL.md
repository_manager/skills/repository-manager-workspace-validation/: SKILL.md  WORKFLOW.md
repository_manager/skills/repository-manager-worktree-orchestration/: SKILL.md  WORKFLOW.md
repository_manager/skills/repository-starter/: SKILL.md
repository_manager/skills/shell/: SKILL.md
repository_manager/skills/smart-coding-mcp/: SKILL.md
repository_manager/skills/system-operations/: SKILL.md
repository_manager/skills/text-editor/: SKILL.md
repository_manager/skills/validation-scripting/: SKILL.md
scratch/: test_runner_stream.py
scripts/: check_graph.py  check_workspace_docs.py  list_mcp_tools.py  run_validate.py  run_validate_final.py  test_mcp_tool_directly.py  test_runner_stream.py  validate_a2a_agent.py  validate_agent.py  validate_ecosystem.py  verify_agent_server.py  verify_graph.py  verify_new_tools.py  verify_tools.py
search/: search_index.json
tests/: conftest.py  pytest_out.txt  test_action_discovery.py  test_agent_integration.py  test_concept_parity.py  test_directory_report.py  test_graph_phases.py  test_graph_pipeline.py  test_init_dynamics.py  test_kg_ingest.py  test_mcp_handlers.py  test_mcp_registration.py  test_phased_auto_start.py  test_phased_push.py  test_pre_push_gate.py  test_pytest_cleanup.py  test_repository_manager.py  test_repository_manager_cli.py  test_scanner.py  test_validation_logic.py  test_vcs_enumerator.py  test_worktree.py
usage/: index.html
(+2 files in other folders)
