[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repository-manager"
version = "1.29.0"
description = "Manage your git projects"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11"
dependencies = [ "agent-utilities[mcp]>=0.41.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [
    "agent-utilities[mcp]>=0.41.0"]

agent = [
    "agent-utilities[agent,logfire]>=0.41.0",
    "pre-commit>=4.5.1",
    "bump2version>=1.0.1"]

all = [
    "agent-utilities[agent,logfire]>=0.41.0",
    "pre-commit>=4.5.1",
    "bump2version>=1.0.1",
    "agent-utilities[mcp]>=0.41.0"
]

test = [
    "pytest-xdist>=3.6.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout"
]

[project.scripts]
repository-manager = "repository_manager.repository_manager:main"
repository-manager-mcp = "repository_manager.mcp_server:mcp_server"
repository-manager-agent = "repository_manager.agent_server:agent_server"

[tool.setuptools.package-data]
repository_manager = ["mcp_config.json", "workspace.yml", "AGENTS.md"]

[tool.uv]
managed = true

[tool.uv.sources]
universal-skills = { workspace = true }

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "universal-skills",
]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]


[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
