[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repository-manager"
version = "2.0.1"
description = "Manage your git projects"
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "License :: Public Domain", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11,<3.15"
dependencies = [ "agent-utilities[mcp]>=1.27.1,<2.0.0",]
[[project.authors]]
name = "Project Maintainers"
email = "maintainers@users.noreply.github.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [
    "agent-utilities[mcp]>=1.27.1,<2.0.0"]

agent = [
    "agent-utilities[agent-runtime,logfire]>=1.27.1,<2.0.0",
    "pre-commit>=4.5.1",
    "bump2version>=1.0.1"]

all = [
    "agent-utilities[agent-runtime,logfire]>=1.27.1,<2.0.0",
    "pre-commit>=4.5.1",
    "bump2version>=1.0.1",
    "agent-utilities[mcp]>=1.27.1,<2.0.0"
]

test = [
    "pytest-xdist>=3.6.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout"
]

[project.scripts]
repository-manager = "repository_manager.repository_manager:main"
repository-manager-mcp = "repository_manager.mcp_server:mcp_server"
repository-manager-agent = "repository_manager.agent_server:agent_server"

[tool.setuptools.package-data]
repository_manager = ["mcp_config.json", "workspace.yml", "AGENTS.md", "prompts/**", "skills/**", "ontology/**", "connectors/**",]

[tool.uv]
managed = true

universal-skills = { path = "../../skills/universal-skills", editable = true }

[project.entry-points."agent_utilities.skill_providers"]
repository-manager = "repository_manager.skills"

[project.entry-points."agent_utilities.ontology_providers"]
repository-manager = "repository_manager.ontology"

[project.entry-points."agent_utilities.source_connector_providers"]
repository-manager = "repository_manager.connectors"

[project.entry-points."agent_utilities.prompt_providers"]
repository-manager = "repository_manager.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "universal-skills",
]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]


[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config", "kw"]
